Shang New Live/src/objects/Task_Activity_History__c.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Time__c</fullName>
        <label>Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Equipment</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>Task Activity History</relationshipLabel>
        <relationshipName>Task_Activity_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion__c</fullName>
        <label>Estimated Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Cost__c</fullName>
        <label>Estimated Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Work_Days__c</fullName>
        <label>Estimated Work Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Task Activity History</relationshipLabel>
        <relationshipName>Task_Activity_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Name_Text__c</fullName>
        <description>This field is populated by W/F rule</description>
        <inlineHelpText>This field is populated by W/F rule</inlineHelpText>
        <label>Property Name Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Task Activity History</relationshipLabel>
        <relationshipName>Task_Activity_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request ID</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Task Activity History</relationshipLabel>
        <relationshipName>Task_Activity_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task_ID__c</fullName>
        <label>Task ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Record_ID__c</fullName>
        <label>Task Record ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tasklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tasklist</label>
        <referenceTo>Tasklist_Master__c</referenceTo>
        <relationshipLabel>Task Activity History</relationshipLabel>
        <relationshipName>Task_Activity_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Task_Activity_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Task Activity History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYYMM}-AH-{000000}</displayFormat>
        <label>Task Activity ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Activity History</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>